<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".routeDisplay">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="225dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/routeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="23dp"
                android:layout_marginRight="23dp"
                android:layout_marginBottom="699dp"
                android:text=""
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="227dp"
        android:layout_marginBottom="3dp" />

</RelativeLayout>